# REA_OpenSource_Backup_System

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
config/: database.py
document/: api_design.md  system_design.md
rea_auth/: Cargo.toml
rea_db/: __init__.py  __main__.py
rea_db/models/: user.py
rea_user/: __main__.py
rea_user/routers/: auth.py
rea_user/services/: auth.py
